--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Gidole Free Typefaces</title>
+    <meta name="description" content="Gidole are elegant and legible DIN-inspired typefaces. It's open source so please help me improve it. More weights in the works. Follow me for updates." />
+    
+    <!-- Schema.org markup for Google+ -->
+    <meta itemprop="name" content="Gidole Free Typefaces">
+    <meta itemprop="description" content="Gidole are elegant and legible DIN-inspired typefaces. It's open source so please help me improve it. More weights in the works. Follow me for updates.">
+    <meta itemprop="image" content="http://gidole.github.io/img/gidoletypefaces.png">
+
+    <!-- Twitter Card data -->  
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@andreaslarsendk">
-    <meta name="twitter:title" content="Gidole free typeface">
-    <meta name="twitter:description" content="A free modern DIN-esque typeface perfect for (almost?) everything. An open source project so please don't hesitate with feedback and other contributions. More weights in the works. Follow me for updates.">
-    <meta name="twitter:image:src" content="http://gidole.github.io/img/gidoletypefaces.png">    <title>Gidole Free Typefaces</title>
+    <meta name="twitter:title" content="Gidole Free Typefaces">
+    <meta name="twitter:description" content="Gidole are elegant and legible DIN-inspired typefaces. It's open source so please help me improve it. More weights in the works. Follow me for updates.">
+    <meta name="twitter:image:src" content="http://gidole.github.io/img/gidoletypefaces.png">       
     <link rel="stylesheet" href="styles.css" type="text/css"/>
-<!--    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>-->
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Gidole Free Typefaces" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://gidole.github.io" />
+    <meta property="og:image" content="http://gidole.github.io/img/gidoletypefaces.png" />
+    <meta property="og:description" content="Gidole are elegant and legible DIN-inspired typefaces. It's open source so please help me improve it. More weights in the works. Follow me for updates." />
+    <meta property="og:site_name" content="Gidole Free Typefaces" />
+
     <noscript><style>#testdrive{opacity:0.25;pointer-events:none;}</style></noscript>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
     <link rel="icon" type="image/png" href="favicon-192x192.png" sizes="192x192">
