Link to commits

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         text-rendering: optimizelegibility;</p>        
 -->
       <h3>Roadmap</h3>
-      <p>
+      <p>These are still being developed. You can see <a href="https://github.com/gidole/sans/commits/master">commits</a> on Github.<br>
         &#187; Weights 100-800 <span class="comment">(maybe 900)</span><br>
         &#187; Improve spacing + kerning<br>
         &#187; Opentype features<br>
