--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     
   </head>
-  <body contenteditable="false">
+  <body contenteditable="true">
     <noscript class="text-center">The Testdrive functions require javascript (and the fontsize may be "off")</noscript>
     <header class="jumbotron">
         <h1 class="text-center">
           <div id="title">Gidole</div>
           <div id="tag">free typefaces</div>
         </h1>
-        <div id="scrollhelp" class="text-center no-select">
+        <div id="scrollhelp" class="text-center no-select" contenteditable="false">
           <div id="inTurnBlurringTextG">
             <div id="inTurnBlurringTextG_1" class="inTurnBlurringTextG">.</div>
             <div id="inTurnBlurringTextG_2" class="inTurnBlurringTextG">.</div>
@@ -54,7 +54,7 @@
           </div>
         </div>
     </header >
-    <nav class="social text-center">
+    <nav class="social text-center" contenteditable="false">
       <div class="socialwrap">
         <span>Get:</span>
         <a href="https://github.com/gidole/sans/blob/master/gidole.zip?raw=true" class="defaulticon" id="downloadlink">
@@ -64,7 +64,7 @@
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m15.02 40h-2.622c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798h-2.622c.002-3.739.003-6.878.003-7.483 0-1.866-.639-3.086-1.357-3.703 4.454-.495 9.129-2.185 9.129-9.866 0-2.182-.774-3.967-2.056-5.365.206-.506.892-2.538-.199-5.291 0 0-1.675-.538-5.493 2.05-1.597-.443-3.308-.665-5.01-.673-1.7.007-3.411.23-5.01.673-3.82-2.587-5.499-2.05-5.499-2.05-1.087 2.753-.401 4.786-.195 5.291-1.279 1.398-2.058 3.183-2.058 5.365 0 7.661 4.668 9.377 9.107 9.882-.572.499-1.088 1.381-1.269 2.673-1.139.511-4.04 1.393-5.819-1.662 0 0-1.056-1.918-3.062-2.061 0 0-1.953-.024-.137 1.216 0 0 1.311.615 2.22 2.924 0 0 1.173 3.888 6.735 2.681.001.222.003 2.474.004 5.399" fill="#181717"/></svg>
         </a>&nbsp;
         <span>Share:</span>
-        <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidole&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Free%20Typeface&url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk" class="twittericon">
+        <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidole&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Free%20Typefaces&url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk" class="twittericon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m5.423-26.19c-.14 9.24-8.326 18.02-17.15 18.415-3.64.16-7.577-1.378-9.877-2.839 2.68.42 7.2-.972 9-2.492-2.64-.28-4.937-2.198-5.677-4.338.76.12 1.911.071 2.631-.069-2.38-.8-4.72-3.105-4.8-6.185.66.32 1.711.702 2.631.762-1.78-1.02-3.323-5.822-1.823-8.262 2.64 2.9 7.518 6.118 12.738 6.438-1.32-5.6 7.515-9.394 10.615-5.654 1.32-.24 2.906-.917 3.946-1.477-.42 1.28-1.585 2.672-2.585 3.392 1.08-.14 2.503-.526 3.323-.946-.5 1.06-2.02 2.454-2.977 3.254"/></svg>
         </a>
         <a href="https://www.facebook.com/dialog/feed?app_class=694165360698061&link=http%3A%2F%2Fgidole.github.io%2F&picture=http%3A%2F%2Fgidole.github.io%2Fimg%2Fgidoletypefaces.png&name=Gidole%20Free%20Typefaces&caption=%20&description=A%20free%20modern%20DIN&redirect_uri=http%3A%2F%2Fwww.facebook.com%2F" target="_blank" class="facebookicon">
@@ -116,7 +116,7 @@
       </aside> -->
       <h2>The Typeface</h2>
       <h3>Design</h3>
-      <p>Gidole is an elegant and highly legible <a href="http://en.wikipedia.org/wiki/DIN_1451">DIN 1451</a>-inspired typeface drawn using <a href="http://en.wikipedia.org/wiki/Euler_spiral">Euler spirals</a>. Gidole Play is obviously more playful and therefore better suited for headlines/posters.</p>
+      <p contenteditable="false">Gidole is an elegant and highly legible <a href="http://en.wikipedia.org/wiki/DIN_1451">DIN 1451</a>-inspired typeface drawn using <a href="http://en.wikipedia.org/wiki/Euler_spiral">Euler spirals</a>. Gidole Play is obviously more playful and therefore better suited for headlines/posters.</p>
 <!--
       <aside>
         <h3>Screenshots</h3>
@@ -130,8 +130,10 @@
         </div>      
       </aside>
 -->
+      <h3>Test Drive</h3>
+      <p>Edit every element on this page that doesn't contain any links. Switch to dark mode and Gidole Play by pressing the top bar icons to the right.</p>
       <h3>Open Source</h3>
-      <p>Everything’s on GitHub - help me by reporting <a href="https://github.com/gidole/sans/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/sans/fork">forking</a> and creating pull requests. The software I’m using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
+      <p contenteditable="false">Everything’s on GitHub - help me by reporting <a href="https://github.com/gidole/sans/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/sans/fork">forking</a> and creating pull requests. The software I’m using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
       </p>
       <h3>License</h3>
       <p>I’ve made an exception to the Open Font License to allow webfont conversions without the need for renaming. The OFL lets you use and modify the font freely in applications, web, desktop, documents etc. 
@@ -143,14 +145,14 @@
         text-rendering: optimizelegibility;</p>        
 -->
       <h3>Roadmap</h3>
-      <p>These are still being developed. You can see <a href="https://github.com/gidole/sans/commits/master">commits</a> on Github.<br>
+      <p contenteditable="false">These are still being developed. You can see <a href="https://github.com/gidole/sans/commits/master" target="_blank">commits</a> on Github.<br>
         &#187; Weights 100-800 <span class="comment">(maybe 900)</span><br>
         &#187; Improve spacing + kerning<br>
         &#187; Opentype features<br>
-        &#187; Your requests, ideas etc.<br>
+        &#187; Your contributions, requests, ideas etc.<br>
       </p>
       <h3>Characters </h3>
-      <p>Supports all latin languages with >500 glyphs.</p>
+      <p>Supports all latin languages with >500 glyphs - some of them shown below.</p>
       <p class="text-center charmap">
         A B C D E F G H I J K L M N O P Q R S T U V W X Y Z<br>
         a b c d e f g h i j k l m n o p q r s t u v w x y z<br><br>
@@ -166,7 +168,7 @@
         &#223; ț μ ẁ &#255; ž
       </p>
       <h2>Credits</h2>
-      <p>
+      <p contenteditable="false">
         The image used is <a title="Faces of Ethiopia" target="_blank" href="http://flickr.com/photos/deepblue66/3201396661">"Faces of Ethiopia"</a> by Dietmar Temps. Some people over at <a target="_blank" href="http://typophile.com/node/121996">Typophile</a> gave me very helpful feedback.
       </p>
     </main>
@@ -228,10 +230,11 @@
         
         var loading = function() {
             // add the overlay with loading image to the page
-            var over = '<div id="overlay">' +
+            var over = '<div id="overlay" contenteditable="false">' +
                 '<div class="wrapper">' +
+                '<h2>×</h2>' +
                 '<h2>Thank you</h2>' +
-                '<p>Thank me by sharing Gidole on social media and/or appreciating my projects on <a href="http://behance.net/andreaslarsen" target="_blank">Behance</a>. Click anywhere to dismiss.</p>' +                
+                '<p>Thank me by spreading the word and/or appreciating my projects on <a href="http://behance.net/andreaslarsen" target="_blank">Behance</a>.</p>' +                
                 '</div>' +
                 '</div>';
             $(over).appendTo('body');
