--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </aside>
 -->
       <h3>Test Drive</h3>
-      <p>Edit every element on this page that doesn't contain any links. Switch to dark mode and Gidole Play by pressing the top bar icons to the right.</p>
+      <p>You can edit any link-free element on this page. Switch to dark mode and Gidole Play by pressing the top bar icons to the right.</p>
       <h3>Open Source</h3>
       <p contenteditable="false">Everything’s on GitHub - help me by reporting <a href="https://github.com/gidole/sans/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/sans/fork">forking</a> and creating pull requests. The software I’m using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
       </p>
