Update links with new repo name

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <nav class="social text-center" contenteditable="false">
       <div class="socialwrap">
         <span>Get:</span>
-        <a href="https://github.com/gidole/sans/blob/master/gidole.zip?raw=true" class="defaulticon" id="downloadlink">
+        <a href="https://github.com/gidole/Gidole-Typefaces/blob/master/gidole.zip?raw=true" class="defaulticon" id="downloadlink">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-19.6-6h24v-4h-24v4m22-18h-6v-10h-8v10h-6l10 10"/></svg>
         </a>
         <a target="_blank" href="https://github.com/gidole/sans" class="defaulticon">
@@ -136,7 +136,7 @@
       <h3>Test Drive</h3>
       <p>You can edit any link-free element on this page. Switch to dark mode and Gidole Play by pressing the top bar icons to the right.</p>
       <h3>Open Source</h3>
-      <p contenteditable="false">Everything’s on GitHub - help me by reporting <a href="https://github.com/gidole/sans/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/sans/fork">forking</a> and creating pull requests. The software I’m using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
+      <p contenteditable="false">Everything’s on GitHub - help me by reporting <a href="https://github.com/gidole/Gidole-Typefaces/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/Gidole-Typefaces/fork">forking</a> and creating pull requests. The software I’m using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
       </p>
       <h3>License</h3>
       <p>I’ve made an exception to the Open Font License to allow webfont conversions without the need for renaming. The OFL lets you use and modify the font freely in applications, web, desktop, documents etc. 
@@ -148,7 +148,7 @@
         text-rendering: optimizelegibility;</p>        
 -->
       <h3>Roadmap</h3>
-      <p contenteditable="false">These are still being developed. You can see <a href="https://github.com/gidole/sans/commits/master" target="_blank">commits</a> on Github.<br>
+      <p contenteditable="false">These are still being developed. You can see <a href="https://github.com/gidole/Gidole-Typefaces/commits/master" target="_blank">commits</a> on Github.<br>
         &#187; Weights 100-800 <span class="comment">(maybe 900)</span><br>
         &#187; Improve spacing + kerning<br>
         &#187; Opentype features<br>
