--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
       </aside> -->
       <h2>The Typeface</h2>
       <h3>Design</h3>
-      <p contenteditable="false">Gidole is an elegant and highly legible <a href="http://en.wikipedia.org/wiki/DIN_1451">DIN 1451</a>-inspired typeface drawn using <a href="http://en.wikipedia.org/wiki/Euler_spiral">Euler spirals</a>. Gidole Play is obviously more playful and therefore better suited for headlines/posters.</p>
+      <p contenteditable="false">Both Gidole and Gidole Play are inspired by <a href="http://en.wikipedia.org/wiki/DIN_1451">DIN #1451</a> but have bigger apertures for improved legability. I've drawn them using <a href="http://en.wikipedia.org/wiki/Euler_spiral">Euler spirals</a> for the smoothest curves possible.<br>
+        They are both pretty versatible but the stem cut Gidole Play is best suited for bigger font sizes.</p>
 <!--
       <aside>
         <h3>Screenshots</h3>
@@ -134,12 +135,13 @@
       </aside>
 -->
       <h3>Test Drive</h3>
-      <p>You can edit any link-free element on this page. Switch to dark mode and Gidole Play by pressing the top bar icons to the right.</p>
+      <p>Any link-free element on this page is editable. Switch to dark mode and Gidole Play by pressing the top bar icons to the right.</p>
       <h3>Open Source</h3>
       <p contenteditable="false">Everything’s on GitHub - help me by reporting <a href="https://github.com/gidole/Gidole-Typefaces/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/Gidole-Typefaces/fork">forking</a> and creating pull requests. The software I’m using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
       </p>
       <h3>License</h3>
-      <p>I’ve made an exception to the Open Font License to allow webfont conversions without the need for renaming. The OFL lets you use and modify the font freely in applications, web, desktop, documents etc. 
+      <p>Open Font Licens without reserved font name, i.e., you can use and modify the font freely in applications, web, desktop, documents etc. 
+        <br>A mention and/or link back to this page is always much appreciated.
       </p>
 <!--
       <h3>Usage</h3>
@@ -149,8 +151,9 @@
 -->
       <h3>Roadmap</h3>
       <p contenteditable="false">These are still being developed. You can see <a href="https://github.com/gidole/Gidole-Typefaces/commits/master" target="_blank">commits</a> on Github.<br>
-        &#187; Weights 100-800 <span class="comment">(maybe 900)</span><br>
+        &#187; Finishing the design<br>
         &#187; Improve spacing + kerning<br>
+        &#187; Weights<br>
         &#187; Opentype features<br>
         &#187; Your contributions, requests, ideas etc.<br>
       </p>
