--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
       </aside> -->
       <h2>The Typeface</h2>
       <h3>Design</h3>
-      <p contenteditable="false">Both Gidole and Gidole Play are inspired by <a href="http://en.wikipedia.org/wiki/DIN_1451">DIN #1451</a> but have bigger apertures for improved legability. I've drawn them using <a href="http://en.wikipedia.org/wiki/Euler_spiral">Euler spirals</a> for the smoothest curves possible.<br>
-        They are both pretty versatible but the stem cut Gidole Play is best suited for bigger font sizes.</p>
+      <p contenteditable="false">The typefaces are inspired by <a href="http://en.wikipedia.org/wiki/DIN_1451">DIN #1451</a> with focus on simplicity, smoothness and legability.
 <!--
       <aside>
         <h3>Screenshots</h3>
@@ -137,11 +136,12 @@
       <h3>Test Drive</h3>
       <p>Any link-free element on this page is editable. Switch to dark mode and Gidole Play by pressing the top bar icons to the right.</p>
       <h3>Open Source</h3>
-      <p contenteditable="false">Everything’s on GitHub - help me by reporting <a href="https://github.com/gidole/Gidole-Typefaces/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/Gidole-Typefaces/fork">forking</a> and creating pull requests. The software I’m using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
+      <p contenteditable="false">Help me by reporting <a href="https://github.com/gidole/Gidole-Typefaces/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/Gidole-Typefaces/fork">forking</a> and creating pull requests. The software I’m using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
       </p>
       <h3>License</h3>
-      <p>Open Font Licens without reserved font name, i.e., you can use and modify the font freely in applications, web, desktop, documents etc. 
-        <br>A mention and/or link back to this page is always much appreciated.
+      <p>Open Font Licens without reserved font name, i.e., you can use and modify the font freely in applications, web, desktop, documents etc.
+      </p>
+      <p>A mention and/or link back to this page is always much appreciated.
       </p>
 <!--
       <h3>Usage</h3>
@@ -150,7 +150,7 @@
         text-rendering: optimizelegibility;</p>        
 -->
       <h3>Roadmap</h3>
-      <p contenteditable="false">These are still being developed. You can see <a href="https://github.com/gidole/Gidole-Typefaces/commits/master" target="_blank">commits</a> on Github.<br>
+      <p contenteditable="false">Under development - see <a href="https://github.com/gidole/Gidole-Typefaces/commits/master" target="_blank">commits</a> on Github.<br>
         &#187; Finishing the design<br>
         &#187; Improve spacing + kerning<br>
         &#187; Weights<br>
@@ -158,7 +158,7 @@
         &#187; Your contributions, requests, ideas etc.<br>
       </p>
       <h3>Characters </h3>
-      <p>Supports all latin languages with >500 glyphs - some of them shown below.</p>
+      <p>Supports all latin languages and has >500 glyphs.</p>
       <p class="text-center charmap">
         A B C D E F G H I J K L M N O P Q R S T U V W X Y Z<br>
         a b c d e f g h i j k l m n o p q r s t u v w x y z<br><br>
@@ -175,7 +175,7 @@
       </p>
       <h2>Credits</h2>
       <p contenteditable="false">
-        The image used is <a title="Faces of Ethiopia" target="_blank" href="http://flickr.com/photos/deepblue66/3201396661">"Faces of Ethiopia"</a> by Dietmar Temps. Some people over at <a target="_blank" href="http://typophile.com/node/121996">Typophile</a> gave me very helpful feedback.
+        The image used is <a title="Faces of Ethiopia" target="_blank" href="http://flickr.com/photos/deepblue66/3201396661">"Faces of Ethiopia"</a> by Dietmar Temps. Some people over at <a target="_blank" href="http://typophile.com/node/121996">Typophile</a> and Reddit gave me very helpful feedback.
       </p>
     </main>
     <script src="js/jquery.js"></script>
