--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Gidole Free Typefaces</title>
-    <meta name="description" content="Gidole are elegant and legible DIN-inspired typefaces. It's open source so please help me improve it. More weights in the works. Follow me for updates." />
+    <meta name="description" content="Gidole are open source DIN-inspired typefaces with focus on simplicity, smoothness and legability. They are named after Gidole in Ethiopia." />
     
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Gidole Free Typefaces">
-    <meta itemprop="description" content="Gidole are elegant and legible DIN-inspired typefaces. It's open source so please help me improve it. More weights in the works. Follow me for updates.">
+    <meta itemprop="description" content="Gidole are open source DIN-inspired typefaces with focus on simplicity, smoothness and legability. They are named after Gidole in Ethiopia.">
     <meta itemprop="image" content="http://gidole.github.io/img/gidoletypefaces.png">
 
     <!-- Twitter Card data -->  
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@andreaslarsendk">
     <meta name="twitter:title" content="Gidole Free Typefaces">
-    <meta name="twitter:description" content="Gidole are elegant and legible DIN-inspired typefaces. It's open source so please help me improve it. More weights in the works. Follow me for updates.">
+    <meta name="twitter:description" content="Gidole are open source DIN-inspired typefaces with focus on simplicity, smoothness and legability. They are named after Gidole in Ethiopia.">
     <meta name="twitter:image:src" content="http://gidole.github.io/img/gidoletypefaces.png">       
     <link rel="stylesheet" href="styles.css" type="text/css"/>
 
@@ -23,7 +23,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://gidole.github.io" />
     <meta property="og:image" content="http://gidole.github.io/img/gidoletypefaces.png" />
-    <meta property="og:description" content="Gidole are elegant and legible DIN-inspired typefaces. It's open source so please help me improve it. More weights in the works. Follow me for updates." />
+    <meta property="og:description" content="Gidole are open source DIN-inspired typefaces with focus on simplicity, smoothness and legability. They are named after Gidole in Ethiopia." />
     <meta property="og:site_name" content="Gidole Free Typefaces" />
 
     <noscript><style>#testdrive{opacity:0.25;pointer-events:none;}</style></noscript>
@@ -36,7 +36,7 @@
     
   </head>
   <body contenteditable="true">
-    <noscript class="text-center">The Testdrive functions require javascript (and the fontsize may be "off")</noscript>
+    <noscript class="text-center">The Testdrive functions requires javascript (and the fontsize may be "off")</noscript>
     <header class="jumbotron">
         <h1 class="text-center">
           <div id="title">Gidole</div>
@@ -91,7 +91,7 @@
     </nav>    
     <main class="wrapper">
       <h2>Gidole</h2>
-      <p>I spent 4 childhood years in Gidole and therefore named these fonts after it. Gidole is a small beautiful rural town in Ethiopia @ 5°38&#8242;57.8&#8243;N 37°22&#8242;08.7&#8243;E overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>).
+      <p>I spent 4 childhood years in Gidole and therefore named these fonts after it. Gidole is a small beautiful rural town in Ethiopia overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>).
       </p>
 <!--      <aside id="testdrive">
         <h3>Settings</h3>
@@ -136,7 +136,7 @@
       <h3>Test Drive</h3>
       <p>Any link-free element on this page is editable. Switch to dark mode and Gidole Play by pressing the top bar icons to the right.</p>
       <h3>Open Source</h3>
-      <p contenteditable="false">Help me by reporting <a href="https://github.com/gidole/Gidole-Typefaces/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/Gidole-Typefaces/fork">forking</a> and creating pull requests. The software I’m using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
+      <p contenteditable="false">Help me by reporting <a href="https://github.com/gidole/Gidole-Typefaces/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/Gidole-Typefaces/fork">forking</a> and creating pull requests. The software, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
       </p>
       <h3>License</h3>
       <p>Open Font Licens without reserved font name, i.e., you can use and modify the font freely in applications, web, desktop, documents etc.
