--- a/index.html
+++ b/index.html
@@ -2,30 +2,30 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Gidole Free Typefaces</title>
-    <meta name="description" content="Gidole are open source DIN-inspired typefaces with focus on simplicity, smoothness and legability. They are named after Gidole in Ethiopia." />
+    <title>Gidole &amp; Gidolinya Free Typefaces</title>
+    <meta name="description" content="Gidole and Gidolinya are open source modern and stylized typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia." />
     
     <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Gidole Free Typefaces">
-    <meta itemprop="description" content="Gidole are open source DIN-inspired typefaces with focus on simplicity, smoothness and legability. They are named after Gidole in Ethiopia.">
-    <meta itemprop="image" content="http://gidole.github.io/img/gidoletypefaces.png">
+    <meta itemprop="name" content="Gidole & Gidolinya Free Typefaces">
+    <meta itemprop="description" content="Gidole and Gidolinya are open source modern and stylized typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia.">
+    <meta itemprop="image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoletypefaces.png">
 
     <!-- Twitter Card data -->  
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@andreaslarsendk">
-    <meta name="twitter:title" content="Gidole Free Typefaces">
-    <meta name="twitter:description" content="Gidole are open source DIN-inspired typefaces with focus on simplicity, smoothness and legability. They are named after Gidole in Ethiopia.">
-    <meta name="twitter:image:src" content="http://gidole.github.io/img/gidoletypefaces.png">       
-    <link rel="stylesheet" href="styles.css" type="text/css"/>
+    <meta name="twitter:title" content="Gidole & Gidolinya Free Typefaces">
+    <meta name="twitter:description" content="Gidole and Gidolinya are open source modern and stylized typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia.">
+    <meta name="twitter:image:src" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoletypefaces.png">       
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Gidole Free Typefaces" />
+    <meta property="og:title" content="Gidole & Gidolinya Free Typefaces" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://gidole.github.io" />
-    <meta property="og:image" content="http://gidole.github.io/img/gidoletypefaces.png" />
-    <meta property="og:description" content="Gidole are open source DIN-inspired typefaces with focus on simplicity, smoothness and legability. They are named after Gidole in Ethiopia." />
-    <meta property="og:site_name" content="Gidole Free Typefaces" />
-
+    <meta property="og:image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoletypefaces.png" />
+    <meta property="og:description" content="Gidole and Gidolinya are open source modern and stylized typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia." />
+    <meta property="og:site_name" content="Gidole & Gidolinya Free Typefaces" />
+  
+    <link rel="stylesheet" href="styles.css" type="text/css"/>
     <noscript><style>#testdrive{opacity:0.25;pointer-events:none;}</style></noscript>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
     <link rel="icon" type="image/png" href="favicon-192x192.png" sizes="192x192">
@@ -40,7 +40,7 @@
     <header class="jumbotron">
         <h1 class="text-center">
           <div id="title">Gidole</div>
-          <div id="tag">free typefaces</div>
+          <div id="tag">&amp; Gidolinya</div>
         </h1>
         <div id="scrollhelp" class="text-center no-select" contenteditable="false">
           <div id="inTurnBlurringTextG">
@@ -64,16 +64,16 @@
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m15.02 40h-2.622c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798h-2.622c.002-3.739.003-6.878.003-7.483 0-1.866-.639-3.086-1.357-3.703 4.454-.495 9.129-2.185 9.129-9.866 0-2.182-.774-3.967-2.056-5.365.206-.506.892-2.538-.199-5.291 0 0-1.675-.538-5.493 2.05-1.597-.443-3.308-.665-5.01-.673-1.7.007-3.411.23-5.01.673-3.82-2.587-5.499-2.05-5.499-2.05-1.087 2.753-.401 4.786-.195 5.291-1.279 1.398-2.058 3.183-2.058 5.365 0 7.661 4.668 9.377 9.107 9.882-.572.499-1.088 1.381-1.269 2.673-1.139.511-4.04 1.393-5.819-1.662 0 0-1.056-1.918-3.062-2.061 0 0-1.953-.024-.137 1.216 0 0 1.311.615 2.22 2.924 0 0 1.173 3.888 6.735 2.681.001.222.003 2.474.004 5.399" fill="#181717"/></svg>
         </a>&nbsp;
         <span>Share:</span>
-        <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidole&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Free%20Typefaces&url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk" class="twittericon">
+        <a target="_blank" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fgidole.github.io%2F&text=Gidole%20%26%20Gidolinya%20Free%20Typefaces&original_referer=&via=andreaslarsendk&hashtags=gidole" class="twittericon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m5.423-26.19c-.14 9.24-8.326 18.02-17.15 18.415-3.64.16-7.577-1.378-9.877-2.839 2.68.42 7.2-.972 9-2.492-2.64-.28-4.937-2.198-5.677-4.338.76.12 1.911.071 2.631-.069-2.38-.8-4.72-3.105-4.8-6.185.66.32 1.711.702 2.631.762-1.78-1.02-3.323-5.822-1.823-8.262 2.64 2.9 7.518 6.118 12.738 6.438-1.32-5.6 7.515-9.394 10.615-5.654 1.32-.24 2.906-.917 3.946-1.477-.42 1.28-1.585 2.672-2.585 3.392 1.08-.14 2.503-.526 3.323-.946-.5 1.06-2.02 2.454-2.977 3.254"/></svg>
         </a>
         <a href="https://plus.google.com/share?url=http://gidole.github.io" target="_blank" class="googleicon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-13.46-5.6c-5.6 0-8.14-3.12-8.14-6.04 0-.9.28-3.18 3-4.76 1.5-.94 3.66-1.6 6.24-1.82-.38-.5-.68-1.1-.68-1.98 0-.3.04-.62.12-.92h-.78c-3.9 0-6.3-3.1-6.3-6.1 0-3.46 2.58-7.18 8.22-7.18h8.44l-2.1 2.1-.16.12h-1.4c.82.84 1.8 2.18 1.8 4.32 0 2.8-1.48 4.18-3.12 5.46-.28.24-.84.76-.84 1.4 0 .64.48 1 .78 1.28.26.22.58.44.94.72 1.62 1.1 3.84 2.66 3.84 5.72 0 3.54-2.58 7.68-9.86 7.68m3-10.78c-.22-.02-.38-.02-.64-.02h-.04c-.52 0-2.3.1-3.64.54-1.28.48-2.82 1.44-2.82 3.4 0 2.16 2.08 4.46 5.92 4.46 3.08 0 4.88-2 4.88-4 0-1.5-.92-2.42-3.66-4.38m16.86-3.62h-4v4h-2v-4h-4v-2h4v-4h2v4h4v2m-15.6-6.26c0-2.04-1.26-6.04-4.16-6.04-1.24 0-2.64.88-2.64 3.3 0 2.4 1.24 5.9 3.94 5.9.12 0 2.86-.02 2.86-3.16"/></svg>
         </a>
-        <a href="https://www.facebook.com/dialog/feed?app_class=694165360698061&link=http%3A%2F%2Fgidole.github.io%2F&picture=http%3A%2F%2Fgidole.github.io%2Fimg%2Fgidoletypefaces.png&name=Gidole%20Free%20Typefaces&caption=%20&description=A%20free%20modern%20DIN&redirect_uri=http%3A%2F%2Fwww.facebook.com%2F" target="_blank" class="facebookicon">
+        <a href="https://www.facebook.com/sharer/sharer.php?s=100&p%5Burl%5D=http%3A%2F%2Fgidole.github.io" target="_blank" class="facebookicon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m6.4-34v6h-4c-1.1 0-2 .9-2 2v4h6v6h-6v16h-6v-16h-4v-6h4v-5c0-3.88 3.14-7 7-7h5"/></svg>
         </a>
-        <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fgidole.github.io%2F&media=http%3A%2F%2Fgidole.github.io%2Fimg%2Fgidoletypefaces.png&description=Gidole%20Free%20Typefaces" target="_blank" class="pinteresticon">
+        <a href="https://www.pinterest.com/pin/create/bookmarklet/?media=https%3A%2F%2Fraw.githubusercontent.com%2Fgidole%2Fgidole.github.io%2Fmaster%2Fimg%2Fgidoletypefaces.png&url=http%3A%2F%2Fgidole.github.io%2F&description=Gidole%20%26%20Gidolinya%20Open%20Source%20Typefaces" target="_blank" class="pinteresticon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-5.6-11.603c-1.605 0-3.137-.678-4.233-1.84l-1.904 6.4-.136.414-.064-.022c-.392.651-1.088 1.048-1.864 1.048-1.212 0-2.2-.986-2.2-2.202 0-.102.012-.195.028-.29l-.034-.014.108-.356 3.698-11.124c0 0-.399-1.226-.399-2.946 0-3.465 1.843-4.465 3.327-4.465 1.484 0 2.834.527 2.834 2.621 0 2.688-1.778 4.064-1.778 6.01 0 1.48 1.206 2.684 2.686 2.684 4.668 0 6.33-3.52 6.33-6.814 0-4.356-3.768-7.9-8.399-7.9-4.633 0-8.401 3.544-8.401 7.9.002 1.348.401 2.688 1.084 3.87.186.312.284.633.284 1.03 0 1.104-.898 2-2 2-.712 0-1.378-.397-1.734-.99-1.068-1.792-1.634-3.836-1.634-5.91 0-6.562 5.562-11.9 12.401-11.9 6.837 0 12.399 5.338 12.399 11.9 0 5.25-3.256 10.9-10.399 10.9"/></svg>            
         </a>&nbsp;
         <span>Me:</span>
@@ -90,34 +90,10 @@
       </div>        
     </nav>    
     <main class="wrapper">
-      <h2>Gidole</h2>
-      <p>I spent 4 childhood years in Gidole and therefore named these fonts after it. Gidole is a small beautiful rural town in Ethiopia overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>).
+      <h2>Gidole &amp; Gidolinya</h2>
+      <h3>Names</h3>
+      <p>I spent 4 childhood years in Gidole and therefore named these fonts after it. Gidole is a small beautiful rural town in Ethiopia overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>). Gidolinya is one of the many languages spoken in the region.
       </p>
-<!--      <aside id="testdrive">
-        <h3>Settings</h3>
-        <p>
-          <input id="toggle-1" type="checkbox">
-          <span class="switchtext">
-            edit anything on this page or
-          </span>
-          <br>
-          <input id="toggle-2" type="checkbox">
-          <span class="switchtext">
-            Gidole-Light (draft - many errors)
-          </span>
-          <br>
-          <input id="toggle-3" type="checkbox">
-          <span class="switchtext">
-            switch to nightmode. 
-          </span>
-          <br>
-          <input id="toggle-4" type="checkbox">
-          <span class="switchtext">
-            Stylistic alternates <span class="comment">(use FireFox/Chrome)</span>
-          </span>
-        </p>
-      </aside> -->
-      <h2>The Typeface</h2>
       <h3>Design</h3>
       <p contenteditable="false">The typefaces are inspired by <a href="http://en.wikipedia.org/wiki/DIN_1451">DIN #1451</a> with focus on simplicity, smoothness and legability.
 <!--
@@ -133,30 +109,14 @@
         </div>      
       </aside>
 -->
-      <h3>Test Drive</h3>
-      <p>Any link-free element on this page is editable. Switch to dark mode and Gidole Play by pressing the top bar icons to the right.</p>
-      <h3>Open Source</h3>
-      <p contenteditable="false">Help me by reporting <a href="https://github.com/gidole/Gidole-Typefaces/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/Gidole-Typefaces/fork">forking</a> and creating pull requests. The software, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
-      </p>
-      <h3>License</h3>
-      <p>Open Font Licens without reserved font name, i.e., you can use and modify the font freely in applications, web, desktop, documents etc.
-      </p>
-      <p>A mention and/or link back to this page is always much appreciated.
-      </p>
+      <h3>Preview</h3>
+      <p>All link-free elements on this page are editable. Switch to dark mode and Gidolinya by pressing the top bar icons to the right.</p>
 <!--
       <h3>Usage</h3>
       <p>You'd probably want to adjust the letterspacing for <span class="reduced">headlines</span> and add this to your css for webpages:<br>
         -webkit-font-smoothing: antialiased;<br>
         text-rendering: optimizelegibility;</p>        
 -->
-      <h3>Roadmap</h3>
-      <p contenteditable="false">Under development - see <a href="https://github.com/gidole/Gidole-Typefaces/commits/master" target="_blank">commits</a> on Github.<br>
-        &#187; Finishing the design<br>
-        &#187; Improve spacing + kerning<br>
-        &#187; Weights<br>
-        &#187; Opentype features<br>
-        &#187; Your contributions, requests, ideas etc.<br>
-      </p>
       <h3>Characters </h3>
       <p>Supports all latin languages and has >500 glyphs.</p>
       <p class="text-center charmap">
@@ -173,9 +133,22 @@
         ą &#230; &#229; &#231; &#240; ə ǵ ﬁ ﬂ ħ ī ĵ ĸ ł ŋ &#248; œ &#254; ȑ
         &#223; ț μ ẁ &#255; ž
       </p>
-      <h2>Credits</h2>
+      <h3>Open Source</h3>
+      <p contenteditable="false">Help me by reporting <a href="https://github.com/gidole/Gidole-Typefaces/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/Gidole-Typefaces/fork">forking</a> and creating pull requests. The software, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
+      </p>
+      <h3>OFL License</h3>
+      <p>You can use and modify the font as you wish. A mention and/or link back to this page is always much appreciated.
+      </p>
+      <h3>Roadmap</h3>
+      <p contenteditable="false">The fonts are under development - see <a href="https://github.com/gidole/Gidole-Typefaces/commits/master" target="_blank">commits</a> and <a href="https://github.com/gidole/Gidole-Typefaces/issues" target="_blank">issues</a> on Github.<br>
+        &#187; Weights<br>
+        &#187; Opentype features<br>
+        &#187; Your contributions, requests, ideas etc.<br>
+      </p>
+      <h3>Credits</h3>
       <p contenteditable="false">
-        The image used is <a title="Faces of Ethiopia" target="_blank" href="http://flickr.com/photos/deepblue66/3201396661">"Faces of Ethiopia"</a> by Dietmar Temps. Some people over at <a target="_blank" href="http://typophile.com/node/121996">Typophile</a> and Reddit gave me very helpful feedback.
+<!--        The image used is <a title="Faces of Ethiopia" target="_blank" href="http://flickr.com/photos/deepblue66/3201396661">"Faces of Ethiopia"</a> by Dietmar Temps. -->
+        Made by me, Andreas Larsen, but some people over at <a target="_blank" href="http://typophile.com/node/121996">Typophile</a> and Reddit gave me very helpful feedback.
       </p>
     </main>
     <script src="js/jquery.js"></script>
