style changes, new bg

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Gidole & Gidolinya Free Typefaces">
     <meta itemprop="description" content="Gidole and Gidolinya are open source modern and stylized typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia.">
-    <meta itemprop="image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoletypefaces.png">
+    <meta itemprop="image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/Gidole&Gidolinya.png">
 
     <!-- Twitter Card data -->  
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@andreaslarsendk">
     <meta name="twitter:title" content="Gidole & Gidolinya Free Typefaces">
     <meta name="twitter:description" content="Gidole and Gidolinya are open source modern and stylized typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia.">
-    <meta name="twitter:image:src" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoletypefaces.png">       
+    <meta name="twitter:image:src" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/Gidole&Gidolinya.png">       
 
     <!-- Open Graph data -->
     <meta property="og:title" content="Gidole & Gidolinya Free Typefaces" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://gidole.github.io" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoletypefaces.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/Gidole&Gidolinya.png" />
     <meta property="og:description" content="Gidole and Gidolinya are open source modern and stylized typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia." />
     <meta property="og:site_name" content="Gidole & Gidolinya Free Typefaces" />
   
@@ -90,9 +90,8 @@
       </div>        
     </nav>    
     <main class="wrapper">
-      <h2>Gidole &amp; Gidolinya</h2>
       <h3>Names</h3>
-      <p>I spent 4 childhood years in Gidole and therefore named these fonts after it. Gidole is a small beautiful rural town in Ethiopia overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>). Gidolinya is one of the many languages spoken in the region.
+      <p>I spent 4 childhood years in Gidole and therefore named these fonts after it. It's a small beautiful rural town up in the mountains in Ethiopia overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>). Gidolinya is the main local language spoken in the area.
       </p>
       <h3>Design</h3>
       <p contenteditable="false">The typefaces are inspired by <a href="http://en.wikipedia.org/wiki/DIN_1451">DIN #1451</a> with focus on simplicity, smoothness and legability.
