Fixed description error

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Gidole &amp; Gidolinya Free Typefaces</title>
-    <meta name="description" content="Gidole and Gidolinya are open source modern and stylized typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia." />
+    <meta name="description" content="Gidole and Gidolinya are open source modern and stylized DIN typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia." />
     
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Gidole & Gidolinya Free Typefaces">
-    <meta itemprop="description" content="Gidole and Gidolinya are open source modern and stylized typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia.">
+    <meta itemprop="description" content="Gidole and Gidolinya are open source modern and stylized DIN typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia.">
     <meta itemprop="image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleandgidolinya.png">
 
     <!-- Twitter Card data -->  
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@andreaslarsendk">
     <meta name="twitter:title" content="Gidole & Gidolinya Free Typefaces">
-    <meta name="twitter:description" content="Gidole and Gidolinya are open source modern and stylized typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia.">
+    <meta name="twitter:description" content="Gidole and Gidolinya are open source modern and stylized DIN typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia.">
     <meta name="twitter:image:src" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleandgidolinya.png">       
 
     <!-- Open Graph data -->
@@ -22,7 +22,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://gidole.github.io" />
     <meta property="og:image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleandgidolinya.png" />
-    <meta property="og:description" content="Gidole and Gidolinya are open source modern and stylized typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia." />
+    <meta property="og:description" content="Gidole and Gidolinya are open source modern and stylized DIN typefaces made by Andreas Larsen. They are named after Gidole in Ethiopia." />
     <meta property="og:site_name" content="Gidole & Gidolinya Free Typefaces" />
   
     <link rel="stylesheet" href="styles.css" type="text/css"/>
