--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Gidole &amp; Gidolinya Free Typefaces</title>
     <meta name="description" content="Gidole and Gidolinya are open source modern and stylized DIN typefaces. They are named after my childhood town Gidole in Ethiopia. I'm currently working on more weights." />
     <meta name="author" content="@andreaslarsendk" />
-    <meta name="keywords" content="Gidole, Gidolinya, Open Source, Typefaces, Fonts"
+    <meta name="keywords" content="Gidole, Gidolinya, Open Source, Typefaces, Fonts, Free"
     
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Gidole & Gidolinya Free Typefaces">
@@ -75,7 +75,7 @@
         <a href="https://www.facebook.com/sharer/sharer.php?s=100&p%5Burl%5D=http%3A%2F%2Fgidole.github.io" target="_blank" class="facebookicon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m6.4-34v6h-4c-1.1 0-2 .9-2 2v4h6v6h-6v16h-6v-16h-4v-6h4v-5c0-3.88 3.14-7 7-7h5"/></svg>
         </a>
-        <a href="https://www.pinterest.com/pin/create/bookmarklet/?media=https%3A%2F%2Fraw.githubusercontent.com%2Fgidole%2Fgidole.github.io%2Fmaster%2Fimg%2Fgidoleandgidolinya.png&url=http%3A%2F%2Fgidole.github.io%2F&description=Gidole%20%26%20Gidolinya%20Open%20Source%20Typefaces" target="_blank" class="pinteresticon">
+        <a href="https://www.pinterest.com/pin/create/link/?media=http://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleandgidolinya.png&url=http://gidole.github.io/&description=Gidole%20%26%20Gidolinya%20Free%20Typefaces" target="_blank" class="pinteresticon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-5.6-11.603c-1.605 0-3.137-.678-4.233-1.84l-1.904 6.4-.136.414-.064-.022c-.392.651-1.088 1.048-1.864 1.048-1.212 0-2.2-.986-2.2-2.202 0-.102.012-.195.028-.29l-.034-.014.108-.356 3.698-11.124c0 0-.399-1.226-.399-2.946 0-3.465 1.843-4.465 3.327-4.465 1.484 0 2.834.527 2.834 2.621 0 2.688-1.778 4.064-1.778 6.01 0 1.48 1.206 2.684 2.686 2.684 4.668 0 6.33-3.52 6.33-6.814 0-4.356-3.768-7.9-8.399-7.9-4.633 0-8.401 3.544-8.401 7.9.002 1.348.401 2.688 1.084 3.87.186.312.284.633.284 1.03 0 1.104-.898 2-2 2-.712 0-1.378-.397-1.734-.99-1.068-1.792-1.634-3.836-1.634-5.91 0-6.562 5.562-11.9 12.401-11.9 6.837 0 12.399 5.338 12.399 11.9 0 5.25-3.256 10.9-10.399 10.9"/></svg>            
         </a>&nbsp;
         <span>Me:</span>
