--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
     <meta itemprop="image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleandgidolinya.png">
 
     <!-- Twitter Card data -->  
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@andreaslarsendk">
-    <meta name="twitter:title" content="Gidole & Gidolinya Free Typefaces">
-    <meta name="twitter:description" content="Gidole and Gidolinya are open source modern and stylized DIN typefaces. They are named after my childhood town Gidole in Ethiopia. I'm currently working on more weights.">
-    <meta name="twitter:image:src" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleandgidolinya.png">       
+    <meta name="twitter:card" content="photo" />
+    <meta name="twitter:creator" content="@andreaslarsendk" />
+    <meta name="twitter:title" content="Gidole & Gidolinya Free Typefaces" />
+    <meta name="twitter:image:src" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleandgidolinya.png" />
+    <meta name="twitter:url" content="https://gidole.github.io" />
+    <meta name="twitter:image:width" content="2424" />
+    <meta name="twitter:image:height" content="1896" />
+
 
     <!-- Open Graph data -->
     <meta property="og:title" content="Gidole & Gidolinya Free Typefaces" />
