--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header >
     <nav class="social text-center" contenteditable="false">
       <div class="socialwrap">
-        <div>
+        <div id="get">
           <span>Get</span>
           <br>
         <a href="https://github.com/gidole/Gidole-Typefaces/blob/master/gidole.zip?raw=true" class="defaulticon" id="downloadlink">
@@ -71,7 +71,7 @@
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m15.02 40h-2.622c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798h-2.622c.002-3.739.003-6.878.003-7.483 0-1.866-.639-3.086-1.357-3.703 4.454-.495 9.129-2.185 9.129-9.866 0-2.182-.774-3.967-2.056-5.365.206-.506.892-2.538-.199-5.291 0 0-1.675-.538-5.493 2.05-1.597-.443-3.308-.665-5.01-.673-1.7.007-3.411.23-5.01.673-3.82-2.587-5.499-2.05-5.499-2.05-1.087 2.753-.401 4.786-.195 5.291-1.279 1.398-2.058 3.183-2.058 5.365 0 7.661 4.668 9.377 9.107 9.882-.572.499-1.088 1.381-1.269 2.673-1.139.511-4.04 1.393-5.819-1.662 0 0-1.056-1.918-3.062-2.061 0 0-1.953-.024-.137 1.216 0 0 1.311.615 2.22 2.924 0 0 1.173 3.888 6.735 2.681.001.222.003 2.474.004 5.399" fill="#181717"/></svg>
         </a>
         </div>
-        <div>
+        <div id="share">
           <span>Share</span>
           <br>
         <a target="_blank" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fgidole.github.io%2F&text=Gidole%20%26%20Gidolinya%20Free%20Typefaces&original_referer=&via=andreaslarsendk&hashtags=gidole" class="twittericon">
@@ -87,7 +87,7 @@
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-5.6-11.603c-1.605 0-3.137-.678-4.233-1.84l-1.904 6.4-.136.414-.064-.022c-.392.651-1.088 1.048-1.864 1.048-1.212 0-2.2-.986-2.2-2.202 0-.102.012-.195.028-.29l-.034-.014.108-.356 3.698-11.124c0 0-.399-1.226-.399-2.946 0-3.465 1.843-4.465 3.327-4.465 1.484 0 2.834.527 2.834 2.621 0 2.688-1.778 4.064-1.778 6.01 0 1.48 1.206 2.684 2.686 2.684 4.668 0 6.33-3.52 6.33-6.814 0-4.356-3.768-7.9-8.399-7.9-4.633 0-8.401 3.544-8.401 7.9.002 1.348.401 2.688 1.084 3.87.186.312.284.633.284 1.03 0 1.104-.898 2-2 2-.712 0-1.378-.397-1.734-.99-1.068-1.792-1.634-3.836-1.634-5.91 0-6.562 5.562-11.9 12.401-11.9 6.837 0 12.399 5.338 12.399 11.9 0 5.25-3.256 10.9-10.399 10.9"/></svg>            
         </a>
         </div>
-        <div>
+        <div id="me">
           <span>Me</span>
           <br>
         <a href="https://www.behance.net/andreaslarsen" target="_blank" class="behanceicon">
@@ -101,10 +101,11 @@
           <svg id="darktoggle" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-17.5-10.1c2.534 2.534 6.03 4.101 9.899 4.101 7.732 0 14-6.268 14-14 0-3.866-1.567-7.366-4.101-9.899l3.757-3.757c-.718-.718-1.573-1.301-2.521-1.705-1.472-.628-2.983-.638-5.056-.638h-12.16c-2.073 0-3.584.01-5.056.638-1.896.809-3.417 2.329-4.226 4.226-.628 1.472-.638 2.983-.638 5.056v12.16c0 2.073.01 3.584.638 5.056.404.948.987 1.802 1.705 2.521l3.757-3.757m19.799-19.799l-19.799 19.799.587-3.677-3.622-.865 1.95-3.173-3.02-2.185 3.02-2.185-1.95-3.173 3.622-.865-.587-3.677 3.677.587.865-3.622 3.173 1.95 2.185-3.02 2.185 3.02 3.173-1.95.865 3.622 3.677-.587"/></svg>
           <svg id="typetoggle" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 0h-15.2c-2.592 0-4.48.013-6.32.798-2.371 1.01-4.271 2.912-5.282 5.282-.785 1.84-.798 3.729-.798 6.32v15.2c0 2.592.013 4.48.798 6.32 1.01 2.371 2.912 4.271 5.282 5.282 1.84.785 3.729.798 6.32.798h15.2c2.592 0 4.48-.013 6.32-.798 2.371-1.01 4.271-2.912 5.282-5.282.785-1.84.798-3.729.798-6.32v-15.2c0-2.592-.013-4.48-.798-6.32-1.01-2.371-2.912-4.271-5.282-5.282-1.84-.785-3.729-.798-6.32-.798m-19.6 10v-4h24v4h-10v24h-4v-24h-10"/></svg>
         </div>
-      </div>        
+      </div>
+      <div id="navbg"></div>      
     </nav>    
     <main class="wrapper">
-      <h3>Names</h3>
+      <h3>Gidole</h3>
       <p>I spent 4 childhood years in Gidole and therefore named these fonts after it. It's a small beautiful rural town up in the mountains in Ethiopia overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>). Gidolinya is the main local language spoken in the area.
       </p>
       <h3>Design</h3>
@@ -172,9 +173,9 @@
         </p>
       </div>
     </div>    
+
+    
     <script src="js/jquery.js"></script>
-    <script src="js/mm-fontsize.js"></script>
-<!--    <script src="slick/slick.min.js"></script>    -->
     <script>
       $(document).ready(function () {
         
