--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       $(window).load(function () {
         $('.jumbotron').addClass('loaded');
         $('#smooth').append('<div><img src="img/GidoleSmooth.png"></div>');
-        $('#simple').append('<div><img src="img/GidoleSimple.png"></div>');
-        $('#legible').append('<div><img src="img/GidoleLegible.png"></div>');
+        $('#simple').append('<div><img src="img/GidoleMinimal.png"></div>');
+        $('#legible').append('<div><img src="img/GidoleLegible.jpg"></div>');
       });                       
     </script>      
     
@@ -169,7 +169,7 @@
       <div class="slideshow">
         <p>The typefaces are inspired by the classic DIN #1451. The letters are drawn with Euler spirals using circles as guidelines. This gives them a minimal look with the smoothest curves and curve to tangent transitions possible.</p>
         <div class="slideimg">
-          <img id="simplethumb" src="img/GidoleSimpleSmall.png" /><img id="smooththumb" src="img/GidoleSmoothSmall.png" /><img id="legiblethumb" src="img/GidoleLegibleSmall.png" />
+          <img id="simplethumb" src="img/GidoleMinimal.png" /><img id="smooththumb" src="img/GidoleSmoothSmall.png" /><img id="legiblethumb" src="img/GidoleLegibleSmall.png" />
         </div>
       </div>  
 
