--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <div class="slideshow">
         <p>The typefaces are inspired by the classic DIN #1451. The letters are drawn with Euler spirals using circles as guidelines. This gives them a minimal look with the smoothest curves and curve to tangent transitions possible.</p>
         <div class="slideimg">
-          <img id="simplethumb" src="img/GidoleMinimal.png" /><img id="smooththumb" src="img/GidoleSmoothSmall.png" /><img id="legiblethumb" src="img/GidoleLegibleSmall.png" />
+          <img id="simplethumb" src="img/GidoleMinimalSmall.png" /><img id="smooththumb" src="img/GidoleSmoothSmall.png" /><img id="legiblethumb" src="img/GidoleLegibleSmall.png" />
         </div>
       </div>  
 
