--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <div id="downloaded" class="overlay">
       <div class="wrapper" id="dlthanks">
         <h2>Thank me</h2>
-        <p>Donate to ERCS<br>
+        <p>Donate to the Ethiopian Red Cross Society (ERCS)<br>
           Tell your friends, like on Github &amp; Behance<br>
           Thank you,<br>
           Andreas
