--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       </div>
 
       <h3>Open Source</h3>
-      <p>Help me by reporting <a href="https://github.com/gidole/Gidole-Typefaces/issues" target="_blank">issues</a> - issues can be anything from errors, to improvement suggestions to requests. You can also contribute directly by <a href="https://github.com/gidole/Gidole-Typefaces/fork">forking</a> and creating pull requests. <a href="http://fontforge.github.io/" target="_blank">FontForge</a> is a free font editor and I've also saved UFO versions.</p>
+      <p>Help me by reporting <a href="https://github.com/gidole/Gidole-Typefaces/issues" target="_blank">issues</a> - issues can be anything from errors, to improvement suggestions, to requests. You can also contribute directly by <a href="https://github.com/gidole/Gidole-Typefaces/fork">forking</a> and creating pull requests. <a href="http://fontforge.github.io/" target="_blank">FontForge</a> is a free font editor and I've also saved UFO versions.</p>
 
       
       <h3>Roadmap</h3>
