--- a/index.html
+++ b/index.html
@@ -241,7 +241,9 @@
         &#187; Your contributions, requests, ideas etc.<br>
       </p>
 
-      
+      <h3>License</h3>
+      <p>Open Font License without reserved font name. Feel free to modify and use for both commercial and private projects. A mention somewhere in your product isn't needed but much appreciated. <a href="https://github.com/gidole/Gidole-Typefaces/blob/master/Resources/GidoleFont/License.txt">License.txt</a></p>
+        
       <h3>The End</h3>
       <p>I'll post major updates on <a target="_blank" href="https://twitter.com/intent/follow?screen_name=andreaslarsendk">Twitter</a> where you can also contact me with questions.<br>
         Let me know if you're using these - I'd love to see it!</p>
